# ai_agent_elara

./: .env  Procfile  README.md  project-steps-v3.md  project-steps-v4.md  project-steps-v5.md  project-steps-v6.md  project-steps.md  pyproject.toml  requirements.txt
chat/: guestbook.py
core_time/: time_guard.py
market/: eth_data.py
memory/guestbook/: messages.json
memory/journal/: journal_manager.py  writer.py
memory/journal/entries/: 2026-02-05.md  2026-02-10.md
persona/: elara.py  elara_ai.py  reflection.py  schedule.py
reflection/: reflection_engine.py
scheduler/: runner.py
tests/: test_step1.py  test_step10.py  test_step11.py  test_step13.py  test_step14.py  test_step15.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py  test_step9.py
trading/: execution.py  indicators.py  pipeline.py  risk.py  strategy.py
