[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elara-agent"
version = "0.1.0"
description = "Elara — a disciplined, introverted AI agent running live on the web"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Vishnu Ajit", email = "vishnuajith310@gmail.com" }
]

dependencies = [
  "pandas",
  "numpy",
  "requests",
  "python-dateutil"
]

[tool.setuptools.packages.find]
where = ["."]
